# stonks-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  fly.dashboard.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  docker-setup.md  parity-guarantees.md  security.md  validation-guide.md
infra/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.data  Dockerfile.worker  docker-compose.dashboard.yml  docker-compose.dev.yml  docker-compose.observability.yml  fly.api.toml  fly.bot.toml  fly.dashboard.toml  prometheus.yml  promtail-config.yml
infra/grafana/dashboards/: stonks-trading.json
scripts/: backfill.py  check_duckdb.py  init_db.py  pre-commit-hook.sh  reset_db.py  rotate_api_keys.py  seed_test_data.py  setup-git-hooks.sh  setup_ip_allowlist.py  sync_to_tigris.py  validate_binance.py  validate_phase_7_8.py  verify_features.py
src/stonks_trading/: __init__.py  api.py
src/stonks_trading/bots/: __init__.py  startup.py
src/stonks_trading/bots/base/: __init__.py  bot.py  context.py  state.py  strategy.py
src/stonks_trading/bots/neat_swing/: __init__.py  bot.py  feature_engineering.py  runner.py  scheduler_hook.py  state.py  strategy.py
src/stonks_trading/domains/: __init__.py
src/stonks_trading/domains/backtesting/: __init__.py  dtos.py  entities.py  mappers.py  repositories.py  routes.py  services.py  use_cases.py
src/stonks_trading/domains/botcontrol/: __init__.py  dtos.py  entities.py  mappers.py  repositories.py  routes.py  services.py  use_cases.py  worker_client.py
src/stonks_trading/domains/capital/: __init__.py  dtos.py  entities.py  mappers.py  repositories.py  routes.py  use_cases.py
src/stonks_trading/domains/health/: __init__.py  dtos.py  entities.py  mappers.py  repositories.py  routes.py  services.py  use_cases.py
src/stonks_trading/domains/instruments/: __init__.py  adapters.py  dtos.py  entities.py  repositories.py  routes.py  services.py  services.py.incoming
src/stonks_trading/domains/market_data/: __init__.py  adapters.py  entities.py  repositories.py
src/stonks_trading/domains/portfolio/: __init__.py  entities.py  repositories.py  services.py  use_cases.py
src/stonks_trading/domains/reconciliation/: __init__.py  dtos.py  entities.py  mappers.py  repositories.py  routes.py  services.py  use_cases.py
src/stonks_trading/domains/strategies/: __init__.py  dtos.py  routes.py
src/stonks_trading/domains/strategies/base/: __init__.py  entities.py  interfaces.py  registry.py  repositories.py
src/stonks_trading/domains/strategies/neat_swing/: __init__.py  config.py  config_builder.py  entities.py  features.py  fitness.py  reporter.py  repositories.py  routes.py  services.py  trading_env.py  trainer.py  use_cases.py
src/stonks_trading/domains/trading/: __init__.py  adapters.py  dtos.py  entities.py  enums.py  mappers.py  repositories.py  routes.py  services.py  use_cases.py  value_objects.py
src/stonks_trading/domains/trading/neat/: __init__.py  features.py  fitness.py  reporter.py  trading_env.py  trainer.py
src/stonks_trading/domains/training/: __init__.py  async_executor.py  dtos.py  entities.py  mappers.py  models_routes.py  real_executor.py  repositories.py  routes.py  scheduler_integration.py  services.py  use_cases.py
src/stonks_trading/presentation/: __init__.py
src/stonks_trading/presentation/dashboard/: __init__.py  app.py  utils.py
src/stonks_trading/shared/: __init__.py  config.py  database.py  logger.py  metrics.py  notifications.py  postgres_models.py  redis_client.py  scheduler.py  serializers.py  testing.py  websocket_api.py  websocket_client.py
src/stonks_trading/shared/features/: __init__.py  live_features.py
src/stonks_trading/shared/ingest/: __init__.py  adapter.py  binance.py  cli.py  massive.py  orchestrator.py
src/stonks_trading/shared/live_data/: __init__.py  manager.py  models.py
src/stonks_trading/shared/storage/: __init__.py  duckdb_client.py  tigris_client.py
src/stonks_trading/worker/: __init__.py  main.py  training_subprocess.py
tests/: __init__.py  conftest.py
tests/e2e/: test_disaster_recovery.py  test_multi_bot_scenario.py  test_neat_parity.py  test_trading_bot.py
tests/integration/: __init__.py  test_api.py  test_bot_control_api.py  test_database.py  test_exchange.py  test_ingestion.py  test_multi_bot_isolation.py  test_neat_swing_bot.py
tests/parity/: __init__.py  test_config_parity.py  test_neat_main_py_parity.py
tests/unit/api/: test_bot_routes.py  test_registry_routes.py
tests/unit/bots/: __init__.py  test_base_bot.py  test_bot_context.py  test_bot_registry.py
tests/unit/bots/neat_swing/: test_bot.py  test_state.py  test_strategy.py  test_strategy_properties.py
tests/unit/dashboard/: test_utils.py
tests/unit/domains/backtesting/: __init__.py  test_backtesting_routes.py  test_entities.py  test_services.py
tests/unit/domains/botcontrol/: __init__.py  test_botcontrol_entities.py  test_botcontrol_repositories.py  test_botcontrol_use_cases.py  test_routes.py  test_services.py
tests/unit/domains/capital/: __init__.py  test_entities.py  test_repositories.py  test_use_cases.py
tests/unit/domains/health/: test_health_entities.py  test_routes.py  test_services.py
tests/unit/domains/instruments/: test_instruments_entities.py
tests/unit/domains/market_data/: __init__.py  test_entities.py
tests/unit/domains/portfolio/: __init__.py  test_entities.py  test_repositories.py  test_use_cases.py
tests/unit/domains/reconciliation/: test_reconciliation_repositories.py  test_services.py  test_use_cases.py
tests/unit/domains/strategies/: __init__.py  test_base.py
tests/unit/domains/trading/: conftest.py
tests/unit/domains/training/: __init__.py  test_entities.py  test_services.py  test_training_routes.py  test_training_scheduler_integration.py
tests/unit/shared/: test_config.py  test_live_features.py  test_metrics.py  test_notifications.py  test_redis_client.py  test_scheduler.py  test_serializers.py  test_testing.py  test_websocket_client.py
(+21 files in other folders)
