[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stonks-trading"
version = "0.1.0"
description = "NEAT-based crypto swing trading system with CLEAN architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Stonks Trading Team" }
]
keywords = ["trading", "neat", "crypto", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "neat-python>=0.92",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.11.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "tortoise-orm>=0.20.0",
    "aerich>=0.7.2",
    "duckdb>=0.9.0",
    # HTTP & Config
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Logging
    "structlog>=24.1.0",
    # Storage
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",  # Required for Parquet support in pandas
    # Async
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    # WebSocket
    "websockets>=12.0",
    # Scheduler
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
# Minimal deps for bot (no FastAPI, no uvicorn)
bot = [
    "neat-python>=0.92",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.11.0",
    "tqdm>=4.66.0",
    "tortoise-orm>=0.20.0",
    "aerich>=0.7.2",
    "duckdb>=0.9.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "boto3>=1.34.0",
    "aiosqlite>=0.19.0",
]

# Full deps with FastAPI for API container
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
]

# Dashboard deps for Streamlit presentation layer
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.18.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.0",
    "faker>=23.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.6.0",
    "streamlit>=1.28",  # Required for dashboard tests in CI
]

[project.scripts]
stonks-bot = "stonks_trading.domains.trading.bot:main"
stonks-api = "stonks_trading.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stonks_trading"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Streamlit uses numbered filenames for page ordering (e.g., 0_Operations_Hub.py)
"src/stonks_trading/presentation/dashboard/pages/*" = ["N999"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "UP042", # Allow (str, Enum) - StrEnum not required
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "neat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ta.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tortoise.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stonks_trading.presentation.dashboard.utils"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "stonks_trading.domains.trading.routes"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.domains.training.routes"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.domains.backtesting.routes"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.api"
ignore_errors = true

# Pre-existing mypy errors in untouched modules — out of scope for Phase 5
[[tool.mypy.overrides]]
module = "stonks_trading.domains.trading.neat.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.shared.storage.tigris_client"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.shared.notifications"
ignore_errors = true

[[tool.mypy.overrides]]
module = "duckdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "stonks_trading.domains.training.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.domains.backtesting.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests", "src/stonks_trading/domains/trading/tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/stonks_trading"]
branch = true
omit = [
    "*/bots/neat_swing/feature_engineering.py",
    "*/bots/neat_swing/runner.py",
    "*/presentation/dashboard/*.py",
    "*/presentation/dashboard/pages/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "async def register",      # Abstract method stubs
    "async def start",          # Abstract method stubs
    "async def stop",           # Abstract method stubs
    "async def handle_candle",  # Abstract method stubs
    "async def persist_state",  # Abstract method stubs
    "async def load_state",     # Abstract method stubs
    "@property",                # Abstract property stubs
    "def required_data_frequency",  # Abstract property stubs
    "\\.\\.\\.",               # Ellipsis continuation markers
]
fail_under = 60
show_missing = false

[tool.aerich]
tortoise_orm = "src.stonks_trading.shared.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[[tool.mypy.overrides]]
module = "stonks_trading.shared.postgres_models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.domains.trading.repositories"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.shared.ingest.cli"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.shared.storage.duckdb_client"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.shared.scheduler"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.domains.trading.adapters"
ignore_errors = true

[[tool.mypy.overrides]]
module = "stonks_trading.shared.ingest.binance"
ignore_errors = true
